--- a/static/css/calculator.css
+++ b/static/css/calculator.css
@@ -40,7 +40,7 @@ body {
     place-items: center;
 }
 
-.calculator span:active {
+.calculator span:active:hover {
     background: #74ff3b;
     color: #111;
 }
