--- a/templates/template.html
+++ b/templates/template.html
@@ -1,8 +1,9 @@
 <html>
     <head>
         <title>Calculator</title>
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', path='/css/calculator.css') }}">
-        <script src="{{ url_for('static', path='/js/calculator.js') }}"></script>
+        {% block staticfiles %}
+        {% endblock  %}
+        <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     </head>
     <body>
         {% block content %}
