--- a/templates/calculator.html
+++ b/templates/calculator.html
@@ -26,7 +26,7 @@
             <span class="num" onclick="clickNumber('3')" id="3">3</span>
             <span class="num" onclick="clickNumber('0')" id="0">0</span> 
             <span class="num" onclick="clickNumber('00')" id="00">00</span>
-            <span class="num" onclick="document.calc.txt.value += '.'" id=".">.</span>
+            <span class="num" onclick="clickNumber('.')" id=".">.</span>
             <span class="num equal" onclick="document.calc.txt.value = calculate(calc.txt.value)" id="=">=</span>
         </form>
     </div>
